--- a/abc.ini
+++ b/abc.ini
@@ -1,10 +1,7 @@
 [Rainmeter]
 Update=1000
 Background=#@#Background.png
-BackgroundMode=1
-BackgroundMargins=0,0,0,0
-W=300
-H=100
+BackgroundMode=3
 
 [Variables]
 Time=0
@@ -22,7 +19,10 @@ Meter=String
 MeasureName=MeasureCounter
 FontSize=20
 FontColor=255,255,255,255
-Y=50%
-X=50%
+StringAlign=CenterCenter
+H=70
+W=280
+X=140
+Y=35
 Text="Time: %1"
 LeftMouseUpAction=[!TogglePauseMeasure MeasureCounter][!CommandMeasure MeasureCounter "SaveValue()"][!SetOption MeterCounter Text "Time: %1"]
