--- a/Measure/Measure.ini
+++ b/Measure/Measure.ini
@@ -5,6 +5,8 @@ BackgroundMode=3
 
 [Variables]
 Time=0
+LevelRequirement=3600
+Level=0
 @include=#@#Variables.inc
 
 [MeasureCounter]
@@ -20,9 +22,9 @@ MeasureName=MeasureCounter
 FontSize=20
 FontColor=255,255,255,255
 StringAlign=CenterCenter
-H=70
+H=160
 W=280
 X=140
-Y=35
-Text="Time: %1"
-LeftMouseUpAction=[!TogglePauseMeasure MeasureCounter][!CommandMeasure MeasureCounter "SaveValue()"][!SetOption MeterCounter Text "Time: %1"]
+Y=80
+Text="%1"
+LeftMouseUpAction=[!TogglePauseMeasure MeasureCounter][!CommandMeasure MeasureCounter "SaveValue()"][!SetOption MeterCounter Text "%1"]
