change level formula, load level on refresh

--- a/Level/Level.ini
+++ b/Level/Level.ini
@@ -1,9 +1,14 @@
 [Rainmeter]
 Background=#@#Background.png
 BackgroundMode=3
+OnRefreshAction=
+
+[Variables]
+Level=0
+@include=#@#Variables.inc
 
 [MeterLevel]
 Meter=String
-Text="0"
+Text=#Level#
 FontSize=20
 FontColor=255,255,255,255
