--- a/Level/Level.ini
+++ b/Level/Level.ini
@@ -27,5 +27,5 @@ Text=#Level#
 FontSize=28
 FontColor=255,255,255,255
 StringAlign=CenterCenter
-X=54
+X=54 ; half of the cover width
 Y=65 ; Play with it until text looks good on your cover
