--- a/Measure/Measure.ini
+++ b/Measure/Measure.ini
@@ -6,8 +6,10 @@ BackgroundMode=3
 [Variables]
 Time=0
 LevelRequirement=3600
+; Loads variables
 @include=#@#Variables.inc
 
+; Calls Counter.lua script and updates every 1 second
 [MeasureCounter]
 Measure=Script
 ScriptFile=#@#Counter.lua
@@ -17,13 +19,15 @@ Paused=1
 
 [MeterCounter]
 Meter=String
-MeasureName=MeasureCounter
+MeasureName=MeasureCounter ; Get what MeasureCounter displayes returns
 FontSize=20
 FontColor=255,255,255,255
 StringAlign=CenterCenter
-H=160
-W=280
-X=140
-Y=80
-Text="%1"
+H=160 ; You can tweak it to your likings
+W=280 ; You can tweak it to your likings
+X=140 ; Half of the W parameter
+Y=80 ; Half of the H parameter
+Text="%1" ; Displayes what MeasureCounter returns
+; When left mouse button is up pauses/unpauses MeasureCounter, saves variables to Variables.inc
+; Sets text back to display measure from MeasureCounter becuase the text display is changed in level.lua file
 LeftMouseUpAction=[!TogglePauseMeasure MeasureCounter][!CommandMeasure MeasureCounter "SaveValue()"][!SetOption MeterCounter Text "%1"]
