--- a/Measure/Measure.ini
+++ b/Measure/Measure.ini
@@ -19,7 +19,8 @@ Paused=1
 
 [MeterCounter]
 Meter=String
-MeasureName=MeasureCounter ; Get what MeasureCounter displayes returns
+; Get what MeasureCounter displayes returns
+MeasureName=MeasureCounter 
 FontSize=20
 FontColor=255,255,255,255
 StringAlign=CenterCenter
